Thick visible focus-visible lines on the homepage. Includes @microbit-robert's fix for single tab stop in carousel

--- a/theme/home.less
+++ b/theme/home.less
@@ -92,18 +92,38 @@
         .action {
             margin: 1rem 0;
             a:focus-visible, button:focus-visible {
-                outline: calc(@homeHeaderBorderSize + 1px) solid @homeHeaderSelectedBorderColor;
+                outline-width: calc(@homeHeaderBorderSize + 1px) !important;
+                outline-style: solid;
+                outline-color: @homeHeaderSelectedBorderColor;
             }
         }
 
-        .dots button {
-            transition: background-color 0.5s;
-            border: 2px solid @heroBannerDotOutlineColor;
-            margin-right: 1.25rem;
+        .dots {
+            align-self: flex-start;
+            border-radius: 50px;
+            line-height: 0;
+            margin-top: 8px;
 
-            &.active {
-                border-color: @heroBannerDotOutlineAtiveColor;
-                background-color: transparent;
+            &:focus-visible {
+                outline-width: 3px !important;
+                outline-style: solid;
+                outline-color: white;
+                outline-offset: 4px;
+            }
+
+            button {
+                transition: background-color 0.5s;
+                border: 2px solid @heroBannerDotOutlineColor;
+                margin-right: 1.25rem;
+
+                &.active {
+                    border-color: @heroBannerDotOutlineAtiveColor;
+                    background-color: transparent;
+                }
+
+                &:last-child {
+                    margin-right: 0px;
+                }
             }
         }
 
@@ -145,7 +165,7 @@
                 cursor: pointer;
                 outline: none;
 
-                &:focus, &:hover {
+                &:hover {
                     color: fade(@homeHeaderColor, 80%);
                 }
 
@@ -160,7 +180,9 @@
                         border-color: @primaryColor;
                     }
                     &:focus-visible {
-                        outline: @homeCardBorderSize solid @homeCardFocusBorderColor !important;
+                        outline-width: @homeCardBorderSize !important;
+                        outline-style: solid;
+                        outline-color: @homeCardFocusBorderColor;
                         outline-offset: 2px;
                     }
                 }
@@ -185,7 +207,9 @@
         position: relative;
         z-index: 1; /* Move up so it's above the carousel container that has an offset margin */
         &:focus-visible {
-            outline: @homeCardBorderSize solid @homeCardFocusBorderColor !important;
+            outline-width: @homeCardBorderSize !important;
+            outline-style: solid;
+            outline-color: @homeCardFocusBorderColor;
             outline-offset: 2px;
         }
     }
@@ -364,8 +388,7 @@
                 transform: translateX(-50%) translateY(-50%);
                 pointer-events: none;
             }
-            .card-action:hover,
-            .card-action:focus-within {
+            .card-action:hover {
                 cursor: pointer;
                 border-color: @white;
                 .ui.button {
@@ -458,7 +481,9 @@
     }
     .ui.card:focus {
         border: 2px solid transparent;
-        outline: @homeCardBorderSize solid @homeCardFocusBorderColor !important;
+        outline-width: @homeCardBorderSize !important;
+        outline-style: solid;
+        outline-color: @homeCardFocusBorderColor;
     }
 }
 
